--- a/Algorithm/01.유클리드 호제법.md
+++ b/Algorithm/01.유클리드 호제법.md
@@ -1,6 +1,6 @@
 # 🔹 유클리드 호제법(Euclidean algorithm)이란?
 <br>
-2개의 자연수의 ***최대공약수(GCD)*** 를 구하는 알고리즘으로,<br>
+2개의 자연수의 <em>최대공약수(GCD)</em> 를 구하는 알고리즘으로,<br>
 유클리드 호제법을 이용하면 더 빠른 시간 안에 최대공약수를 구할 수 있다.<br>
 <br>
 1. 큰 수를 작은 수로 나눠서 나머지를 구하고,<br>
