--- a/JAVA/01.배열.md
+++ b/JAVA/01.배열.md
@@ -2,7 +2,7 @@
 <br>
 인덱스와 인덱스에 대응하는 데이터들로 이루어진 연속적인 자료구조로, 같은 종류의 데이터들이 순차적으로 저장됨.
 
-#### 자바에서 배열의 생성
+#### 자바에서 배열의 생성 
 1. 배열에 대한 레퍼런스 변수 선언<br>
 2. 배열 생성 -> 배열의 저장 공간 할당
 
@@ -13,4 +13,15 @@
   int myArray []; 
   // 배열 생성
   myArray = new int [5];  
+  
+  // 배열의 선언과 동시에 생성
+  iny myArray = new int [5];
 ```
+
+#### 다차원 배열 생성 예시 (2행 5열의 2차원 배열)
+
+```Java
+  int myArray = new int [2][5];
+```
+
+### 메소드에서 배열 리턴
