--- a/JAVA/01.배열.md
+++ b/JAVA/01.배열.md
@@ -2,7 +2,7 @@
 <br>
 인덱스와 인덱스에 대응하는 데이터들로 이루어진 연속적인 자료구조로, 같은 종류의 데이터들이 순차적으로 저장됨.
 
-#### 자바에서 배열의 생성 
+### 📙 자바에서 배열의 생성 
 1. 배열에 대한 레퍼런스 변수 선언<br>
 2. 배열 생성 -> 배열의 저장 공간 할당
 
@@ -24,4 +24,21 @@
   int myArray = new int [2][5];
 ```
 
-### 메소드에서 배열 리턴
+### 📙 배열의 정렬
+
+#### Arrays.sort()을 이용한 배열의 정렬
+
+java.util.Arrays의 sort()를 이용하면 배열(Array)이나 리스트(List) 정렬 가능! <br>
+클래스 내에 기본적으로 구현되어 있는 Comparable Interface의 compareTo 메서드를 기준으로 하기 때문에 기본 정렬은 오름차순이다.
+
+String, Integer, Double 등과 같은 Object 타입에 배열은 sort에 Collections.reverseOrder() 사용이 가능하지만, 기본타입인 int, double, char, float 등은
+사용이 불가하므로 기본타입의 배열을 Object를 상속하는 Wrapper 클래스로 박싱해주어야 내림차순 정렬도 가능하다.
+
+```Java
+  // 오름차순 정렬
+  Arrays.sort(myArray);
+  // 내림차순 정렬(int 타입인 경우 integer 타입으로 변경 후, 정렬)
+  Integer[] tmp = Arrays.stream(myArray).boxed().toArray(Integer[]::new);
+  Arrays.sort(tmp, Comparator.reverseOrder());
+```
+
