--- a/JAVA/01.배열.md
+++ b/JAVA/01.배열.md
@@ -28,11 +28,11 @@
 
 #### Arrays.sort()을 이용한 배열의 정렬
 
-java.util.Arrays의 sort()를 이용하면 배열(Array)이나 리스트(List) 정렬 가능! <br>
+java.util.Arrays의 sort()를 이용하면 배열(Array)이나 리스트(List)를 정렬 할 수 있다. <br>
 클래스 내에 기본적으로 구현되어 있는 Comparable Interface의 compareTo 메서드를 기준으로 하기 때문에 기본 정렬은 오름차순이다.
 
-String, Integer, Double 등과 같은 Object 타입에 배열은 sort에 Collections.reverseOrder() 사용이 가능하지만, 기본타입인 int, double, char, float 등은
-사용이 불가하므로 기본타입의 배열을 Object를 상속하는 Wrapper 클래스로 박싱해주어야 내림차순 정렬도 가능하다.
+String, Integer, Double 등과 같은 Object 타입의 배열은 sort에 Collections.reverseOrder() 사용이 가능하지만, 기본타입인 int, double, char, float 등은
+사용이 불가능하므로 기본타입의 배열을 Object를 상속하는 Wrapper 클래스로 박싱해주어야 내림차순 정렬도 가능하다.
 
 ```Java
   // 오름차순 정렬
@@ -41,4 +41,5 @@ String, Integer, Double 등과 같은 Object 타입에 배열은 sort에 Collect
   Integer[] tmp = Arrays.stream(myArray).boxed().toArray(Integer[]::new);
   Arrays.sort(tmp, Comparator.reverseOrder());
 ```
+<img src="https://github.com/yejinsohn/TIL/assets/104317217/a2db07e2-e07a-4965-b94a-c254b244e6b5" width="700" height="350"/>
 
