--- a/JAVA/03.문자열.md
+++ b/JAVA/03.문자열.md
@@ -1,5 +1,30 @@
 # 🔹 자바 문자열을 다루는 String 클래스 
 
-### 📙 사용 빈도가 높은 메소드
+### 📙 자주 사용되는 메소드
 
-#### 
+#### ✔ 문자 반환 charAt() <br>
+문자열 중 해당 인덱스의 문자(char형)를 반환
+
+#### ✔ 문자열 비교 equals() <br>
+자바에서 문자열 리터럴이 동일하다면 동일한 String 객체를 참조! <br>
+두 개의 String 객체의 문자열을 비교하고 싶다면 == 연산자 대신 equals() 메소드를 사용해야 한다.
+
+#### ✔ 문자열 찾기 indexOf() <br>
+해당 문자열이 시작되는 인덱스를 리턴, 만약 주어진 문자열이 포함되어 있지 않으면 -1을 리턴한다.
+
+#### ✔ 문자열 길이 length() <br>
+ 문자열의 길이 리턴
+
+#### ✔ 문자열 대치 replace() <br>
+String은 변경이 불가능하기 때문에 replace() 메소드가 리턴하는 문자열은 원래 문자열의 수정이 아니라 완전히 새로운 문자열이다.
+
+#### ✔ 문자열 잘라내기 substring() <br>
+문자열의 특정 부분을 잘라내는데 사용 
+1. public String substring(int startIndex) : startIndex부터 문자열 끝까지 리턴
+2. public String substring(int startIndex, int endIndex) : startIndex부터 endIndex(불포함)까지 리턴
+
+#### ✔ 알파벳 소·대문자 변경 toLowerCase(), toUpperCase() <br>
+toLowerCase() : 문자열을 모두 소문자로 바꾼 새로운 문자열 생성 후 리턴 <br>
+toUpperCase() : 문자열을 모두 대문자로 바꾼 새로운 문자열 생성 후 리턴
+
+
