--- a/JAVA/03.문자열.md
+++ b/JAVA/03.문자열.md
@@ -15,8 +15,9 @@
 #### ✔ 문자열 길이 length() <br>
  문자열의 길이 리턴
 
-#### ✔ 문자열 대치 replace() <br>
-String은 변경이 불가능하기 때문에 replace() 메소드가 리턴하는 문자열은 원래 문자열의 수정이 아니라 완전히 새로운 문자열이다.
+#### ✔ 문자열 대치 replace() / replaceAll() <br>
+String은 변경이 불가능하기 때문에 replace() 메소드가 리턴하는 문자열은 원래 문자열의 수정이 아니라 완전히 새로운 문자열이다. <br>
+replace()와 replaceAll()은 인자 값의 형태를 보면 CharSequence와 String 이라는 차이점이 있다.
 
 #### ✔ 문자열 잘라내기 substring() <br>
 문자열의 특정 부분을 잘라내는데 사용 
