--- a/JAVA/배열.md
+++ b/JAVA/배열.md
@@ -1,6 +1,5 @@
-# 🔹 배열이란?
-<br>
-인덱스와 인덱스에 대응하는 데이터들로 이루어진 연속적인 자료구조로, 같은 종류의 데이터들이 순차적으로 저장됨.
+## 💭 배열이란?
+인덱스와 인덱스에 대응하는 데이터들로 이루어진 연속적인 자료구조로, 같은 종류의 데이터들이 순차적으로 저장됨!
 
 ### 📙 자바에서 배열의 생성 
 1. 배열에 대한 레퍼런스 변수 선언<br>
