--- a/Spring/연관관계.md
+++ b/Spring/연관관계.md
@@ -1,7 +1,9 @@
 ## 💭 연관관계
 
-JPA에서 가장 중요한 것은 "객체와 관계형 데이터베이스 테이블이 어떻게 매핑되는지를 이해하는 것"이라고 생각한다! <br>
-여기서 객체와 관계형 데이터베이스 테이블을 서로 매핑하는 것을 "연관관계의 매핑"이라고 한다.<br>
+JPA에서 가장 중요한 것은 "**객체와 관계형 데이터베이스 테이블이 어떻게 매핑되는지를 이해하는 것**"이라고 생각한다! <br>
+> 여기서 객체와 관계형 데이터베이스 테이블을 서로 매핑하는 것을 "**연관관계의 매핑**"이라고 한다.<br>
+
+------------
 
 #### 연관관계 매핑에서 고려해야하는 3가지 
 ##### 1. 방향 : 단방향, 양방향
@@ -15,11 +17,10 @@ JPA에서 가장 중요한 것은 "객체와 관계형 데이터베이스 테이
 모든 객체간의 관계를 양방향으로 매핑하면 좋은 거 아닌가 하는 생각을 할 수 있겠지만,무분별한 양방향의 사용은 지양해야한다. 일반적인 비즈니스 로직에서 User와 같은 다른 객체들과 관계를 많이 맺는 객체의 경우 모든 연관관계를 양방향 관계로 매핑하게 되면 해당 객체가 너무 복잡해지는 문제가 발생한다. 따라서, 연관관계의 방향을 설정할 때는 기본적으로 단방향으로 매핑을 하고 후에 양방향 매핑이 필요하다고 판단이 되면 그때 양방향으로 매핑하는 방법이 좋다.
 
 #### 📂 다중성
-데이터베이스를 기준으로 다중성을 결정
+어떤 Entity를 중심으로 상대 Entity를 바라보느냐에 따라 다중성이 달라진다.
 
 #### 📂 연관관계의 주인
-연관 관계의 주인은 연관 관계를 갖는 두 객체 사이에서 관리(조회, 저장, 수정, 삭제)를 할 수 있지만, 연관 관계의 주인이 아니면 조회만 가능하다.
-
-어노테이션 
+연관관계의 주인은 연관관계를 갖는 두 객체 사이에서 관리(조회, 저장, 수정, 삭제)를 할 수 있지만, 연관관계의 주인이 아니면 조회만 가능하다.<br>
+양방향 연관관계에서 변경이 일어날 경우, 연관관계의 주인만 변경해주는 것이 아니라 양쪽 다 변경해주는 것이 바람직하다.
 
 
