--- a/JAVA/배열.md
+++ b/JAVA/배열.md
@@ -14,7 +14,7 @@
   myArray = new int [5];  
   
   // 배열의 선언과 동시에 생성
-  int myArray = new int [5];
+  int [] myArray = new int [5];
 ```
 
 #### 다차원 배열 생성 예시 (2행 5열의 2차원 배열)
