--- a/JAVA/배열.md
+++ b/JAVA/배열.md
@@ -42,3 +42,8 @@ String, Integer, Double 등과 같은 Object 타입의 배열은 sort에 Collect
 ```
 <img src="https://github.com/yejinsohn/TIL/assets/104317217/a2db07e2-e07a-4965-b94a-c254b244e6b5" width="700" height="350"/>
 
+### 📙 배열 길이 반환 (length / length() / size())
+- length : 배열의 길이 
+- length() : 문자열의 길이 
+- size() : 컬렉션 프레임워크 타입의 길이
+
