--- a/JAVA/문자열.md
+++ b/JAVA/문자열.md
@@ -5,27 +5,96 @@
 #### ✔ 문자 반환 charAt() <br>
 문자열 중 해당 인덱스의 문자(char형)를 반환
 
+```Java
+String example = "Hello JAVA";
+char answer = example.charAt(6);
+
+System.out.println(answer);
+// 출력 결과 : J
+```
+
 #### ✔ 문자열 비교 equals() <br>
 자바에서 문자열 리터럴이 동일하다면 동일한 String 객체를 참조! <br>
-두 개의 String 객체의 문자열을 비교하고 싶다면 == 연산자 대신 equals() 메소드를 사용해야 한다.
+두 개의 String 객체의 문자열을 비교하고 싶다면 == 연산자 대신 equals() 메소드를 사용해야 한다. (==연산자는 주소 비교)
+
+ ```Java
+String example1 = "Hello";
+String example2 = example1;
+String example3 = new String("Hello");
+
+// == 연산자는 주소 비교
+System.out.println(example1 == example2); // true
+System.out.println(example1 == example3); // false
+
+// equals()는 내용 비교
+System.out.println(example1.equals(example2)); // true
+System.out.println(example1.equals(example3)); // true
+```
 
 #### ✔ 문자열 찾기 indexOf() <br>
 해당 문자열이 시작되는 인덱스를 리턴, 만약 주어진 문자열이 포함되어 있지 않으면 -1을 리턴한다.
 
+```Java
+String example = "Hello JAVA";
+
+System.out.println(example.indexOf("J"));
+// 출력 결과 : 6
+```
+
 #### ✔ 문자열 길이 length() <br>
  문자열의 길이 리턴
+
+ ```Java
+String example = "Hello JAVA";
+
+System.out.println(example.length());
+// 출력 결과 : 10
+```
 
 #### ✔ 문자열 대치 replace() / replaceAll() <br>
 String은 변경이 불가능하기 때문에 replace() 메소드가 리턴하는 문자열은 원래 문자열의 수정이 아니라 완전히 새로운 문자열이다. <br>
 replace()와 replaceAll()은 인자 값의 형태를 보면 CharSequence와 String 이라는 차이점이 있다.
+
+ ```Java
+String example = "Hello JAVA";
+String Newex = example.replace("JAVA", "C");
+
+System.out.println(Newex);
+// 출력 결과 : Hello C
+```
 
 #### ✔ 문자열 잘라내기 substring() <br>
 문자열의 특정 부분을 잘라내는데 사용 
 1. public String substring(int startIndex) : startIndex부터 문자열 끝까지 리턴
 2. public String substring(int startIndex, int endIndex) : startIndex부터 endIndex(불포함)까지 리턴
 
+ ```Java
+String example = "Hello JAVA";
+String Subex1 = example.substring(6);
+String Subex2 = example.substring(0, 5);
+
+System.out.print(Subex1 + " "+ Subex2);
+// 출력 결과 : JAVA Hello
+```
+
 #### ✔ 알파벳 소·대문자 변경 toLowerCase(), toUpperCase() <br>
 toLowerCase() : 문자열을 모두 소문자로 바꾼 새로운 문자열 생성 후 리턴 <br>
 toUpperCase() : 문자열을 모두 대문자로 바꾼 새로운 문자열 생성 후 리턴
+
+```Java
+// toLowerCase()
+String example = "HELLO LOW";
+String exampleLow = example.toLowerCase();
+
+System.out.println(exampleLow);
+// 출력 결과 : hello low
+
+// toUpperCase()
+String example = "Hello up";
+String exampleUp = example.toUpperCase();
+
+System.out.println(exampleUp);
+// 출력 결과 : HELLO UP
+```
 
 
