--- a/JAVA/문자열.md
+++ b/JAVA/문자열.md
@@ -31,6 +31,17 @@ System.out.println(example1.equals(example2)); // true
 System.out.println(example1.equals(example3)); // true
 ```
 
+#### ✔ 문자열 포함 여부 확인 contains() <br>
+대상 문자열에 특정 문자열이 포함되어 있는지 확인하는 함수로 대/소문자를 구분한다.
+
+```Java
+String example = "Hello JAVA";
+
+System.out.println(example.contains("Hello")); // true
+System.out.println(example.contains("JAVA")); // true
+System.out.println(example.contains("java")); // false
+```
+
 #### ✔ 문자열 찾기 indexOf() <br>
 해당 문자열이 시작되는 인덱스를 리턴, 만약 주어진 문자열이 포함되어 있지 않으면 -1을 리턴한다.
 
@@ -48,7 +59,7 @@ System.out.println(example.indexOf("J"));
 String example = "Hello JAVA";
 
 System.out.println(example.length());
-// 출력 결과 : 10
+// 출력 결과 : 
 ```
 
 #### ✔ 문자열 대치 replace() / replaceAll() <br>
