--- a/JAVA/문자열.md
+++ b/JAVA/문자열.md
@@ -13,6 +13,19 @@ System.out.println(answer);
 // 출력 결과 : J
 ```
 
+#### ✔ 문자 배열 반환 toCharArray() <br>
+문자열을 한 문자씩 나눠 char 타입의 배열에 담아 반환
+
+```Java
+String example = "Hello JAVA";
+char [] answer = example.toCharArray();
+
+for(int i=0; i<answer.length; i++) {
+ System.out.print(answer[i] + "/");
+}
+// 출력 결과 : H/e/l/l/o/ /J/A/V/A/
+```
+
 #### ✔ 문자열 비교 equals() <br>
 자바에서 문자열 리터럴이 동일하다면 동일한 String 객체를 참조! <br>
 두 개의 String 객체의 문자열을 비교하고 싶다면 == 연산자 대신 equals() 메소드를 사용해야 한다. (==연산자는 주소 비교)
