--- a/JAVA/크롤링.md
+++ b/JAVA/크롤링.md
@@ -1,1 +1,3 @@
-자바를 활용해 크롤링을 하려면
+자바를 활용한 크롤링 방법으로는 Jsoup 라이브러리를 가장 많이 사용한다. 그러나 Jsoup 라이브러리는 동적 웹 페이지는 크롤링을 할 수 없다는 한계가 있다.
+
+동적 웹 페이지를 크롤링하려면 셀레니움(Selenium) 라이브러리를 활용해야한다!
