--- a/JAVA/크롤링.md
+++ b/JAVA/크롤링.md
@@ -1,3 +1,14 @@
-자바를 활용한 크롤링 방법으로는 Jsoup 라이브러리를 가장 많이 사용한다. 그러나 Jsoup 라이브러리는 동적 웹 페이지는 크롤링을 할 수 없다는 한계가 있다.
+## 💭 자바로 웹 사이트 데이터 크롤링 하는 방법
+> 자바로 웹 사이트 데이터를 크롤링하기 위해서는 Jsoup이나 Selenium 라이브러리를 주로 사용한다. <br>
+> 두 라이브러리의 차이점에 대해 간단히 정리 해보려고 한다.
 
-동적 웹 페이지를 크롤링하려면 셀레니움(Selenium) 라이브러리를 활용해야한다!
+### 📍 Jsoup vs Selenium 비교
+### ✔️ Jsoup 
+- 자바로 만들어진 HTML Parser다. <br>
+- **정적 웹 사이트**의 자료를 수집할 때 주로 사용한다. <br>
+- 동적으로 변경되는 데이터의 정보를 수집하기는 어렵다. (HTTP Request 정보를 이용하기 때문에 빠르지만 정적임!) <br>
+
+### ✔️ Selenium
+- 웹 어플리케이션 테스트를 자동화할 때 사용되는 라이브러리다. <br>
+- **동적 웹 사이트**의 자료를 수집할 때 주로 사용한다. <br>
+- 브라우저의 WebDriver를 이용해야 한다. <br>
