--- a/JAVA/문자열.md
+++ b/JAVA/문자열.md
@@ -45,7 +45,7 @@ System.out.println(example1.equals(example3)); // true
 ```
 
 #### ✔ 문자열 포함 여부 확인 contains() <br>
-대상 문자열에 특정 문자열이 포함되어 있는지 확인하는 함수로 대/소문자를 구분한다.
+대상 문자열 '안'에 특정 문자열이 포함되어 있는지 확인하는 함수로 대/소문자를 구분한다.
 
 ```Java
 String example = "Hello JAVA";
@@ -53,6 +53,28 @@ String example = "Hello JAVA";
 System.out.println(example.contains("Hello")); // true
 System.out.println(example.contains("JAVA")); // true
 System.out.println(example.contains("java")); // false
+```
+
+
+#### ✔ 문자열 포함 여부 확인 startsWith() <br>
+대상 문자열 '앞'에 특정 문자열이 포함되어 있는지 확인하는 함수로 대/소문자를 구분한다.
+
+```Java
+String example = "Hello JAVA";
+
+System.out.println(example.startsWith("Hello")); // true
+System.out.println(example.startsWith("JAVA")); // false
+```
+
+
+#### ✔ 문자열 포함 여부 확인 endsWith() <br>
+대상 문자열 '끝'에 특정 문자열이 포함되어 있는지 확인하는 함수로 대/소문자를 구분한다.
+
+```Java
+String example = "Hello JAVA";
+
+System.out.println(example.endsWith("Hello")); // false
+System.out.println(example.endsWith("JAVA")); // true
 ```
 
 #### ✔ 문자열 찾기 indexOf() <br>
