--- a/JAVA/크롤링.md
+++ b/JAVA/크롤링.md
@@ -4,11 +4,11 @@
 
 ### 📍 Jsoup vs Selenium 비교
 ### ✔️ Jsoup 
-- 자바로 만들어진 HTML Parser다. <br>
-- **정적 웹 사이트**의 자료를 수집할 때 주로 사용한다. <br>
+- 자바로 만들어진 HTML Parser <br>
+- **정적 웹 사이트**의 자료를 수집할 때 주로 사용 <br>
 - 동적으로 변경되는 데이터의 정보를 수집하기는 어렵다. (HTTP Request 정보를 이용하기 때문에 빠르지만 정적임!) <br>
 
 ### ✔️ Selenium
-- 웹 어플리케이션 테스트를 자동화할 때 사용되는 라이브러리다. <br>
-- **동적 웹 사이트**의 자료를 수집할 때 주로 사용한다. <br>
+- 웹 어플리케이션 테스트를 자동화할 때 사용되는 라이브러리 <br>
+- **동적 웹 사이트**의 자료를 수집할 때 주로 사용 <br>
 - 브라우저의 WebDriver를 이용해야 한다. <br>
